feat(documentation) update swagger documentation - update readme
